# contrail-neutron-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  MANIFEST.in  README.md  README.rst  SConscript  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/contrail/: vnc_api_lib.ini
networking_contrail/common/: constants.py  utils.py
networking_contrail/extensions/: contrail.py  loadbalancercustomattributes.py
networking_contrail/plugin/: plugin.py  plugin_base.py
networking_contrail/plugin/middlewares/: user_token.py
networking_contrail/quota/: driver.py
networking_contrail/services/loadbalancer/: utils.py
networking_contrail/services/networking_bgpvpn/: contrail.py
networking_contrail/services/neutron_fwaas/: contrail.py
networking_contrail/services/trunk/: plugin.py
networking_contrail/tests/plugin/: test_plugin.py
networking_contrail/tests/quota/: test_quota.py
neutron_plugin_contrail/common/: constants.py  exceptions.py  utils.py
neutron_plugin_contrail/extensions/: baremetal_vif.py  contrail.py  dummy.py  ipam.py  loadbalancer.py  loadbalancercustomattributes.py  physical.py  policy.py  qos.py  serviceinterface.py  vfbinding.py  vpcroutetable.py
neutron_plugin_contrail/plugin/: plugin.py  plugin_base.py
neutron_plugin_contrail/plugin/middlewares/: user_token.py
neutron_plugin_contrail/quota/: driver.py
neutron_plugin_contrail/tests/: test_plugins_opencontrail_quota_driver.py
vif_plug_vrouter/: .vrouter.py.swp  exception.py  i18n.py  privsep.py  vrouter.py
vif_plug_vrouter/tests/: test_plugin.py
(+88 files in other folders)
