[metadata]
name = contrail-neutron-plugin
summary = OpenStack Neutron plugin for OpenContrail
description-file =
    README.md
author = OpenContrail
author-email = dev@lists.opencontrail.org
home-page = http://www.opencontrail.org/
classifier =
    Environment :: OpenContrail
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    neutron_plugin_contrail
data_files =
    /etc/neutron/plugins/opencontrail =
        etc/neutron/plugins/opencontrail/ContrailPlugin.ini

